fixed misc product detail design and spacing. fixed region selector initialization.

--- a/_/css/base/_utility.scss
+++ b/_/css/base/_utility.scss
@@ -7,7 +7,7 @@
 	display: block;
 }
 .hide {
-	display: none;
+	display: none !important;
 }
 .offscreen {
 	display: block;
